--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "colorjs.io": "^0.4.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
