--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "types:contentful": "export $(cat .env | awk '!/^\\s*#/' | awk '!/^\\s*$/'); cf-content-types-generator --spaceId $CONTENTFUL_SPACE_ID --token $CONTENTFUL_MANAGEMENT_TOKEN -o contentful/ -X"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "classnames": "^2.5.1",
     "colorjs.io": "^0.4.5",
     "contentful": "^10.6.22",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-aria-components": "^1.1.1",
+    "react-dom": "^18",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
