--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-aria-components": "^1.1.1",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "vaul": "^0.9.0"
   },
   "devDependencies": {
